--- a/style.css
+++ b/style.css
@@ -6,18 +6,75 @@ main{
     height: 100vh;
 }
 header {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    height: 100%;
-    background-color: blue;
+    height: 120px;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+
+}
+.Logo {
+    width: 120px;
+    height: 120px;
+}
+nav{
+    width: 100%;
+    flex-grow: 1;
+    display: flex;
+    justify-content: end;
+    gap: 1em;
+
+}
+.strona_główna{
+    width: 90px;
+    text-align: center;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+
+}
+a {
+    color: inherit; /* Kolor dziedziczony z rodzica, jak zwykły tekst */
+    text-decoration: none; /* Usuwa podkreślenie */
+    cursor: default; /* Zmieniamy kursor na domyślny, jak dla zwykłego tekstu */
+}
+.Menu{
+    width: 110px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+}
+select {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    font-size: 14px;
+    background-color: #fff;
+    color: #333;
+    transition: border-color 0.3s ease-in-out;
+    outline: none;
+}
+
+.Cennik{
+    width: 90px;
+    text-align: center;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 #lewa,#prawa {
     flex: 1;
     height: 100%;
-}
-.logo {
-    width: 20%;
-    padding: 20px;
 }
 #lewa {
     background-color: blueviolet;
