--- a/style.css
+++ b/style.css
@@ -1,53 +1,67 @@
 html,body{
     height: 100%;
-}
-main{ 
-    display: flex;
-    height: 100vh;
-}
-header {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    width: 100%;
+}
+body{ 
+    height: 100vh;
     display: flex;
-    justify-content: space-between;
-    height: 120px;
-    align-items: center;
-    margin: 0;
-    padding: 0;
+}
+
+#left{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 80%;
+
+}
+#right{
+    background-color: rgb(114, 155, 141);
+    flex-direction: column;
+    height: 100%;
+    width: 20%;
+    color: red;
+
+}
+#left1{
+    display: flex;
+    background-color: rgb(53, 104, 119);
+    height: 200px;
+    color: rgb(0, 0, 0);
+}
+#left2{
+    background-color: rgb(216, 216, 216);
+    height: 100%;
+    color: red;
 
 }
 .Logo {
+
     width: 120px;
     height: 120px;
+    margin: 0px 0px 0px 40px;
 }
 nav{
+    align-items: center;
+    height: 50px;
     width: 100%;
     flex-grow: 1;
     display: flex;
     justify-content: end;
     gap: 1em;
-
-}
+    margin: 75px 30px 0px 75px;}
 .strona_główna{
+
     width: 90px;
     text-align: center;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-
-}
-a {
-    color: inherit; /* Kolor dziedziczony z rodzica, jak zwykły tekst */
-    text-decoration: none; /* Usuwa podkreślenie */
-    cursor: default; /* Zmieniamy kursor na domyślny, jak dla zwykłego tekstu */
 }
 .Menu{
-    width: 110px;
+    width: 90px;
     background-color: #ffffff;
-    padding: 20px;
+    padding: 17px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
@@ -64,7 +78,7 @@ select {
     outline: none;
 }
 
-.Cennik{
+.Aktualne{
     width: 90px;
     text-align: center;
     background-color: #ffffff;
@@ -72,13 +86,9 @@ select {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-#lewa,#prawa {
-    flex: 1;
-    height: 100%;
+a {
+    color: inherit; 
+    text-decoration: none; 
+    cursor: default; 
 }
-#lewa {
-    background-color: blueviolet;
-}
-#prawa {
-    background-color: rgb(255, 255, 255);
-}
+
